--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -8,7 +8,7 @@
   You have <%= @players_count %> players!
   <ul>
     <% @players.each do |player| %>
-    <li><%= player.name %></li>
+    <li class="player-item"><%= player.name %> <%= cl_image_tag player.picture, height: 100 %></li>
     <% end %>
   </ul>
   Choose two players!
