Add javascript logic to choose two players by clicking on their image

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -22,3 +22,11 @@
 .player-item img {
   border-radius: 50%;
 }
+
+.first-picked img {
+  opacity: 0.4;
+}
+
+.second-picked img {
+  opacity: 0.4;
+}
