--- a/app/assets/stylesheets/pages/_new_battle.scss
+++ b/app/assets/stylesheets/pages/_new_battle.scss
@@ -5,3 +5,42 @@
 .second-picked img {
   opacity: 0.4;
 }
+
+.step-content {
+  h1 {
+    font-size: 40px;
+  }
+  p.subtitle {
+    font-size: 16px;
+    opacity: 0.4;
+  }
+  a {
+    color: $yellow;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+
+.player-list {
+  margin: 80px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.player-item {
+  margin: 0 20px;
+  p {
+    margin-bottom: 0;
+  }
+}
+
+.player-item img {
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+p.text-transparent {
+  opacity: 0.4;
+}
+
