--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
-$yellow: #FFC65A;
+$yellow: #E4AF36;
 $orange: #C76929;
 $green: #1EDD88;
 $gray: #0E0000;
