Add style for player index

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -23,3 +23,18 @@ a.button-start {
     opacity: 0.8;
   }
 }
+
+.btn-submit-small {
+  background-color: $yellow;
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-size: 16px;
+  color: $gray;
+  font-family: 'Eczar', serif;
+  text-decoration: none;
+  &:hover {
+    opacity: 0.8;
+    text-decoration: none;
+    color: $gray;
+  }
+}
