--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,8 +5,7 @@
     <% end %>
   </div>
   <div class="navbar-right-content">
-    <p><%= link_to 'Manage players', players_path %></p>
+    <p><%= link_to 'All players', players_path %></p>
     <p><%= link_to 'All battles', battles_path %></p>
-    <p><%= link_to 'Player stats', '#' %></p>
   </div>
 </div>
