--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -6,13 +6,7 @@
 
   <div class="form-width">
     <%= simple_form_for(@player) do |f| %>
-      <%= f.input :name, input_html: { class: 'form-input' } %>
-      <%= f.input :strength_points, label: 'Strength 💪', input_html: { class: 'form-input' } %>
-      <%= f.input :intelligence_points, label: 'Intelligence 💡', input_html: { class: 'form-input' } %>
-      <%= f.input :magic_points, label: 'Magic 💫', input_html: { class: 'form-input' } %>
-      <%= f.input :picture %>
-      <%= f.input :picture_cache, as: :hidden %>
-      <%= f.button :submit, class: 'btn-submit' %>
+      <%= render 'form', f:f %>
     <% end %>
   </div>
 </div>
