--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,5 +1,5 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "new_battle";
-@import "general";
 @import "index_player";
+@import "show_battle";
