Fix style migration for battle table creation

--- a/app/assets/stylesheets/components/_utility.scss
+++ b/app/assets/stylesheets/components/_utility.scss
@@ -19,6 +19,10 @@ p.fixed-width-p {
   margin-top: 40px;
 }
 
+.m-b-0 {
+  margin-bottom: 0;
+}
+
 .margin-dotted-table {
   margin: 40px 0;
   border: dotted 1px rgb(255,255,255);
