--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </div>
   <div class="navbar-right-content">
-    <p><%= link_to 'All players', players_path %></p>
-    <p><%= link_to 'All battles', battles_path %></p>
+    <p><%= link_to 'Players', players_path %></p>
+    <p><%= link_to 'Battles', battles_path %></p>
   </div>
 </div>
