Add frontend for battle stats

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -14,6 +14,7 @@
         <td><strong>Traits</strong></td>
         <td><strong>Lives</strong></td>
         <td><strong>Attack</strong></td>
+        <td><strong>Victory %</strong></td>
         <td></td>
         <td></td>
       </tr>
@@ -37,6 +38,9 @@
           </td>
           <td>
             <%= player.attack_points %> <i class="fas fa-fist-raised"></i>
+          </td>
+          <td>
+
           </td>
           <td>
             <%= link_to edit_player_path(player), class: 'yellow-link' do %>
