--- a/app/assets/stylesheets/components/_utility.scss
+++ b/app/assets/stylesheets/components/_utility.scss
@@ -23,6 +23,14 @@ p.fixed-width-p {
   margin-bottom: 0;
 }
 
+.m-s-40 {
+  margin: 0 40px;
+}
+
+.m-r-15 {
+  margin-right: 15px;
+}
+
 .margin-dotted-table {
   margin: 40px 0;
   border: dotted 1px rgb(255,255,255);
