--- a/app/views/battles/new.html.erb
+++ b/app/views/battles/new.html.erb
@@ -7,7 +7,8 @@
     Create at least <%= link_to "another player", new_player_path %>
   <% else %>
     <h1>Choose two players 🤝</h1>
-    <p class="subtitle">Click on the avatar of two players - you can also <%= link_to "create a new player", new_player_path %>.</p>
+    <p class="subtitle m-b-0">Click on the avatar of two players - you can also <%= link_to "create a new player", new_player_path %>.</p>
+    <p class="subtitle">Be careful, if a player loses a battle, he loses a life <i class="fas fa-heart"></i>. If he wins, he gains attack points <i class="fas fa-fist-raised"></i>!</p>
     <div class="player-list">
       <% @players.each do |player| %>
         <div class="player-item text-center" data-player-id=<%= "#{player.id}" %>>
