--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-image: url('https://raw.githubusercontent.com/sandrineay/pdv-images/master/lotr-map.jpg');
+  background-image: url('https://raw.githubusercontent.com/sandrineay/pdv-images/master/lotr-map.png');
   background-size: 100vw;
   color: $gray;
 }
