--- a/app/views/battles/show.html.erb
+++ b/app/views/battles/show.html.erb
@@ -15,6 +15,13 @@
 
     <h2 class="m-t-40">Battle recap:</h2>
 
+    <p class="text-transparent m-b-0">
+      <%= @winner.name %> gained an additional life and 0.3 attack points!
+    </p>
+    <p class="text-transparent">
+      <%= @loser.name %> lost a life :(
+    </p>
+
     <table class="margin-dotted-table">
       <tr>
         <td></td>
