--- a/app/views/battles/new.html.erb
+++ b/app/views/battles/new.html.erb
@@ -14,7 +14,7 @@
       <% @players.each do |player| %>
         <div class="player-item text-center" data-player-id=<%= "#{player.id}" %>>
           <% if player.picture_url %>
-            <%= cl_image_tag player.picture, height: 100 %>
+            <%= cl_image_tag player.picture, height: 100, width: 100, crop: :thumb, gravity: :face %>
           <% else %>
             <%= image_tag 'avatar.png', class: 'avatar-large' %>
           <% end %>
