--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -22,7 +22,7 @@
         <tr data-player-id="<%= player.id %>">
           <td>
             <% if player.picture_url %>
-              <%= cl_image_tag player.picture, height: 100 %>
+              <%= cl_image_tag player.picture, height: 100, width: 100, crop: :thumb, gravity: :face %>
             <% else %>
               <%= image_tag 'avatar.png', class: 'avatar-large' %>
             <% end %>
