--- a/app/views/battles/new.html.erb
+++ b/app/views/battles/new.html.erb
@@ -12,7 +12,7 @@
     <p class="subtitle">- When a player has lost all his lives, he cannot fight anymore! He's dead <i class="fas fa-dizzy"></i></p>
     <div class="player-list">
       <% @players.each do |player| %>
-        <div class="player-item text-center" data-player-id=<%= "#{player.id}" %>>
+        <div class="player-item text-center <%= 'selected' if @battle.player_1_id == player.id %>" data-player-id=<%= "#{player.id}" %>>
           <% if player.picture_url %>
             <%= cl_image_tag player.picture, height: 100, width: 100, crop: :thumb, gravity: :face %>
           <% else %>
@@ -24,8 +24,8 @@
       <% end %>
     </div>
     <%= simple_form_for(@battle) do |f| %>
-      <%= f.input :player_1_id, as: :hidden %>
-      <%= f.input :player_2_id, as: :hidden %>
+      <%= f.input :player_1_id, as: :hidden, error: false %>
+      <%= f.input :player_2_id, as: :hidden, error: false %>
       <%= f.button :submit, 'Launch the battle!', class: "btn-submit" %>
     <% end %>
   <% end %>
