--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
   <body>
     <%= render 'shared/navbar' if !(params['controller'] == 'pages' && params['action'] == 'home') %>
+    <%= render "shared/flashes" %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
