--- a/app/views/battles/new.html.erb
+++ b/app/views/battles/new.html.erb
@@ -1,10 +1,15 @@
 <div class="container step-content">
   <% if @players.empty? %>
-    <%= link_to "Create at least two players!", new_player_path %>
+    <h1>Uh oh!</h1>
+    <p class="text-transparent">You cannot launch a battle without any players!</p>
+    <%= link_to "Create at least another player", new_player_path, class: 'btn-submit-small' %>
   <% elsif @players_count == 1 %>
-    You have only <%= @players_count %> player!
-    <p><%= @players.first.name %></p>
-    Create at least <%= link_to "another player", new_player_path %>
+    <h1>Uh oh!</h1>
+    <p class="text-transparent">You cannot launch a battle with only one player!</p>
+    <div class="player-item text-center width-100">
+      <%= render 'shared/player_card', player: @players.first %>
+    </div>
+    <%= link_to "Create at least another player", new_player_path, class: 'btn-submit-small' %>
   <% else %>
     <h1>Choose two players 🤝</h1>
     <p class="subtitle m-b-0">Click on the avatar of two players - you can also <%= link_to "create a new player", new_player_path %>.</p>
@@ -13,13 +18,7 @@
     <div class="player-list">
       <% @players.each do |player| %>
         <div class="player-item text-center <%= 'selected' if @battle.player_1_id == player.id %>" data-player-id=<%= "#{player.id}" %>>
-          <% if player.picture_url %>
-            <%= cl_image_tag player.picture, height: 100, width: 100, crop: :thumb, gravity: :face %>
-          <% else %>
-            <%= image_tag 'avatar.png', class: 'avatar-large' %>
-          <% end %>
-          <p><%= player.name %></p>
-          <p class="text-transparent"><%= player.life_points %> <i class="fas fa-heart"></i></p>
+          <%= render 'shared/player_card', player: player %>
         </div>
       <% end %>
     </div>
