Add a button in the navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,5 +7,6 @@
   <div class="navbar-right-content">
     <p><%= link_to 'Players', players_path %></p>
     <p><%= link_to 'Battles', battles_path %></p>
+    <%= link_to "Launch a new battle", new_battle_path, class: 'btn-submit-small-navbar grey-link' %>
   </div>
 </div>
