--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Modify your player:</h1>
-  <div class="form-width">
+  <div class="width-500">
     <%= simple_form_for @player, url: player_path(@player) do |f| %>
       <%= render 'form', f: f %>
     <% end %>
