--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -11,7 +11,7 @@
     - Your player will have by default 3 life points <i class="fas fa-heart"></i> and 1 attack point <i class="fas fa-fist-raised"></i>.
   </p>
 
-  <div class="form-width">
+  <div class="width-500">
     <%= simple_form_for(@player) do |f| %>
       <%= render 'form', f:f %>
     <% end %>
