--- a/app/assets/stylesheets/pages/_new_battle.scss
+++ b/app/assets/stylesheets/pages/_new_battle.scss
@@ -6,16 +6,6 @@
   opacity: 0.2;
 }
 
-.step-content {
-  h1 {
-    font-size: 40px;
-  }
-  p.subtitle {
-    font-size: 16px;
-    opacity: 0.4;
-  }
-}
-
 .player-list {
   margin: 80px 0;
   display: flex;
@@ -27,15 +17,10 @@
   p {
     margin-bottom: 0;
   }
-}
-
-.player-item img {
-  border-radius: 50%;
-  margin-bottom: 20px;
-}
-
-p.text-transparent {
-  opacity: 0.4;
+  img {
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
 }
 
 .selected img {
